--- a/mydiscuss/CartoonPlay/app/src/main/res/layout/item_main_grid.xml
+++ b/mydiscuss/CartoonPlay/app/src/main/res/layout/item_main_grid.xml
@@ -14,10 +14,11 @@
 
     <TextView
         android:id="@+id/item_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="60dp"
+        android:layout_gravity="center_horizontal"
+        android:ellipsize="end"
         android:gravity="center_horizontal"
-        android:textColor="@android:color/white"
-        android:layout_gravity="center_horizontal" />
+        android:textColor="@android:color/white" />
 
 </LinearLayout>
