--- a/_includes/head_base.html
+++ b/_includes/head_base.html
@@ -6,12 +6,12 @@
 <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 
 <!-- favicon -->
-<link rel="shortcut icon" href="{{crturl}}/assets/favicon.ico" type="image/icon">
-<link rel="icon" href="{{crturl}}/assets/favicon.ico" type="image/icon">
-<link rel="stylesheet" type="text/css" href="{{crturl}}/assets/stylesheets/base.css">
-<link rel="stylesheet" type="text/css" href="{{crturl}}/assets/stylesheets/simplePagination.css">
+<link rel="shortcut icon" href="{{crturl}}assets/favicon.ico" type="image/icon">
+<link rel="icon" href="{{crturl}}assets/favicon.ico" type="image/icon">
+<link rel="stylesheet" type="text/css" href="{{crturl}}assets/stylesheets/base.css">
+<link rel="stylesheet" type="text/css" href="{{crturl}}assets/stylesheets/simplePagination.css">
 
-<script type="text/javascript" src="{{crturl}}/assets/javascripts/jquery.js"></script>
+<script type="text/javascript" src="{{crturl}}assets/javascripts/jquery.js"></script>
 
 <!--[if lt IE 9]>
 <script src="{{crturl}}javascripts/html5shiv.js"></script>
