--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,9 +27,9 @@
                             <li><a href="{{crturl}}/tag">TAG</a></li>
                         </ul>
                     </li>
-                    <li class="col-lg-3"><a href="{{crturl}}/about">ABOUT</a></li>
-                    <li class="col-lg-3"><a href="{{crturl}}/freemind">FREEMIND</a></li>
-                    <li class="col-lg-3"><a href="{{crturl}}/building">PLAY GROUND</a></li>
+                    <li class="col-lg-3"><a href="{{crturl}}about">ABOUT</a></li>
+                    <li class="col-lg-3"><a href="{{crturl}}freemind">FREEMIND</a></li>
+                    <li class="col-lg-3"><a href="{{crturl}}building">PLAY GROUND</a></li>
                 </ul>
             </nav>
 
