--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,7 +28,7 @@
                         </ul>
                     </li>
                     <li class="col-lg-3"><a href="{{crturl}}about">ABOUT</a></li>
-                    <li class="col-lg-3"><a href="{{crturl}}freemind">FREEMIND</a></li>
+                    <li class="col-lg-3"><a href="{{crturl}}freemind.html">FREEMIND</a></li>
                     <li class="col-lg-3"><a href="{{crturl}}building">PLAY GROUND</a></li>
                 </ul>
             </nav>
