change theme to colors

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,11 +14,11 @@ layout: default
 
   <br>
 
-  <p>
-    Tagged 
-    {% for tag in page.tags %}
-    <a href="/tag/{{tag}}">{{tag}}</a>
-  </p>
+  <!-- <p> -->
+  <!--   Tagged --> 
+  <!--   {% for tag in page.tags %} -->
+  <!--   <a href="/tag/{{tag}}">{{tag}}</a> -->
+  <!-- </p> -->
 
   <hr style="height:2px; border:none; margin: 2rem 0; background-color:#e7e9ee;">
 
